# OMS

./: CMakeLists.txt  architecture.md
Database/include/: Account_dbt.h  BuyLimitation_dbt.h  Change_dbt.h  CoinMinBalance_alertMessageThreshold_dbt.h  Coin_dbt.h  CommissionRateRule_dbt.h  CommissionRate_dbt.h  Commission_dbt.h  DatabaseTable.h  Database_manager.h  DepositWithdrawal_dbt.h  GroupCoinMarketCommission_dbt.h  Group_dbt.h  LastTradePriceGenerator_dbt.h  MarketResponseDetail_dbt.h  MarketResponse_dbt.h  Market_dbt.h  Message_dbt.h  Prices_dbt.h  StairCommission_dbt.h  TradeRequestGenerator_dbt.h  TradeRequestRobot_dbt.h  TradeRequest_dbt.h  Trade_dbt.h  WalletHistory_dbt.h  Wallet_dbt.h
Database/src/: Account_dbt.cpp  BuyLimitation_dbt.cpp  Change_dbt.cpp  CoinMinBalance_alertMessageThreshold_dbt.cpp  Coin_dbt.cpp  CommissionRateRule_dbt.cpp  CommissionRate_dbt.cpp  Commission_dbt.cpp  DatabaseTable.cpp  Database_manager.cpp  DepositWithdrawal_dbt.cpp  GroupCoinMarketCommission_dbt.cpp  Group_dbt.cpp  LastTradePriceGenerator_dbt.cpp  MarketResponseDetail_dbt.cpp  MarketResponse_dbt.cpp  Market_dbt.cpp  Message_dbt.cpp  Prices_dbt.cpp  StairCommission_dbt.cpp
binapi/include/: api.hpp  double_type.hpp  dtf.cpp  dtf.hpp  enums.hpp  errors.hpp  flatjson.hpp  fnv1a.hpp  invoker.hpp  iofmt.hpp  message.hpp  pairslist.hpp  reports.hpp  tools.hpp  types.hpp  websocket.hpp
binapi/src/: api.cpp  enums.cpp  errors.cpp  pairslist.cpp  reports.cpp  tools.cpp  types.cpp  websocket.cpp
container/include/: Account.h  AccountTpSl.h  BuyLimitation.h  Change.h  Coin.h  CoinMinBalance_alertMessageThreshold.h  Commission.h  CommissionRate.h  CommissionRateRule.h  DatabaseHandler.h  DepositWithdrawal.h  Enums.h  Group.h  GroupCoinMarketCommission.h  LastTradePriceGenerator.h  Market.h  MarketResponse.h  MarketResponseDetail.h  Message.h  Prices.h  StairCommission.h  Trade.h  TradeRequest.h  TradeRequestGenerator.h  TradeRequestRobot.h  TradeResult.h  Wallet.h  WalletHistory.h
container/src/: TradeRequest.cpp
logger/include/: Logger.h
logger/src/: Logger.cpp
main/include/: AThread.h  ApiInterface.h  ChangeProcessor.h  CircularArray.h  Configuration.h  DepositWithdrawalProcessor.h  GlobalVariables.h  QueueCell.h  TradeRequestProcessor.h  UtilityTools.h  stdafx.h
main/src/: AThread.cpp  ApiInterface.cpp  ChangeProcessor.cpp  CircularArray.cpp  Configuration.cpp  DepositWithdrawalProcessor.cpp  GlobalVariables.cpp  QueueCell.cpp  TradeRequestProcessor.cpp  UtilityTools.cpp  main.cpp
market/: KucoinWebSocket_README.md
market/include/: BinanceFeeder.h  BinanceTrader.h  FeedCheckerThread.h  KucoinFeeder.h  KucoinFeederPython.h  KucoinTokenManager.h  KucoinTrader.h  KucoinWebSocketFeed.h  MarketObjects.h  MarketTrader.h  MarketWalletsSupervisor.h  NobitexFeeder.h  NobitexTrader.h  PriceFeeder.h  PriceFeederManager.h  PythonInterface.h
market/src/: BinanceFeeder.cpp  BinanceTrader.cpp  FeedCheckerThread.cpp  KucoinFeeder.cpp  KucoinFeederPython.cpp  KucoinTokenManager.cpp  KucoinTrader.cpp  KucoinWebSocketFeed.cpp  MarketObjects.cpp  MarketTrader.cpp  MarketWalletsSupervisor.cpp  NobitexFeeder.cpp  NobitexTrader.cpp  PriceFeeder.cpp  PriceFeederManager.cpp  PythonInterface.cpp
